# medcmp

./: .gitignore  Dockerfile  Makefile  README.md  mypy.ini  notes.md  pyproject.toml
dockerfiles/: Dockerfile
medcmp/: Report.py  main.py  scan.py
medcmp/checks/: DataFileCheck.py  DicomsegContentCheck.py  FileCompare.py  ImageFileCheck.py  SizeCheck.py
src/: Report.py  compare_data.py  main.py  scan.py
src/checks/: DataFileCheck.py  DicomsegContentCheck.py  FileCompare.py  ImageFileCheck.py  SizeCheck.py
src/old/: compare_data.py  compare_image.py
test/: csv_data_file_test.py  number_comparison_test.py  yaml_report_test.py
test/ref/: data.yml  hallo.txt
test/ref/deep/: more.json
test/src/: data.yml  hallo.txt
test/src/deep/: more.json
