[tool.poetry]
name = "medcmp"
version = "0.1.1"
description = "Iteratively compare generated output of medical imaging segmentation and prediction models and reporting."
authors = ["LennyN95 <lenny@moontec.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.3"
pyyaml = "^6.0.2"
pydicom = "^2.4.4"
pydicom-seg = "^0.4.1"
simpleitk = "^2.4.0"
pyplastimatch = "^0.4.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.3"
pytest = "^8.3.2"

[tool.poetry.scripts]
medcmp = "medcmp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
